Fix on product page display.. spacing for search bar increase padding-top

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,11 +15,7 @@ html {
 
 /*--- navbar ----- */
 
-.collapse {
-    background: #ADA996;  /* fallback for old browsers */
-    background: -webkit-linear-gradient( #8e9eab, #ffffff);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(#8e9eab,  #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
+
 
 .navbar-toggler-item {
     color: #000000;
@@ -51,6 +47,10 @@ html {
     letter-spacing: 6px;
     padding: 9px;
     margin: 3px;
+}
+
+.search-button {
+    padding-top: 1.5em;
 }
 
 /* --- footer ----*/
